button added to html

--- a/HTML course/index.html
+++ b/HTML course/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1 id="head">Hello world</h1>
+    <div>
+        <form>
+            <input type="text" placeholder="Your data"> 
+            <button type="submit">Submit</button>
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
