--- a/HTML course/index.html
+++ b/HTML course/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-   
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,6 +12,9 @@
             <input type="text" placeholder="Your data"> 
             <button type="submit">Submit</button>
         </form>
+    </div>
+    <div>
+        <canvas id='canvas' height="200px" weidth="300px"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
